frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  /* color: #646cff; */
  text-decoration: inherit;
}
a:hover {
  /* color: #535bf2; */
}

body {
  margin: 0;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    /* color: #747bff; */
  }
}

#root {
  width: 100%;
  flex:1;
}

@media screen and (max-width: 767px) {
  input,
  textarea,
  select {
    font-size: 16px !important;
  }
}

